// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Cancel button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <div
          className="comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "comment_test",
            }
          }
        />
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Cancel button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <div
          className="comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "comment_test",
            }
          }
        />
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Delete button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  deleteComment={[Function]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <div
          className="comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "comment_test",
            }
          }
        />
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <div
          className="comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "comment_test",
            }
          }
        />
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <CommentInput
          autoFocus={true}
          error={null}
          hideProfile={true}
          onCancel={[Function]}
          onChange={[Function]}
          onDelete={[Function]}
          onSubmit={[Function]}
          user={
            Object {
              "name": "Benny Cosmos",
              "openplatformId": "1234",
            }
          }
          value="comment_test"
        >
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              className="form-group "
              onFocus={[Function]}
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <textarea
                autoFocus={true}
                className="form-control mb1 comment-textarea"
                name="list-description"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Skriv kommentar"
                value="comment_test"
              />
              <div
                className="tr"
                style={
                  Object {
                    "height": "0px",
                    "opacity": 0,
                    "overflow": "hidden",
                    "transition": "opacity 200ms",
                  }
                }
              >
                <button
                  className="comment-delete btn btn-link link-subtle"
                  onClick={[Function]}
                >
                  Slet
                </button>
                <button
                  className="comment-cancel btn btn-link link-subtle"
                  onClick={[Function]}
                >
                  Fortryd
                </button>
                <button
                  className="btn btn-success"
                  disabled={false}
                  id="comment-submit"
                  onClick={[Function]}
                >
                  Gem
                </button>
              </div>
            </div>
          </div>
        </CommentInput>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Render comment 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "35px",
            "lineHeight": "64.75px",
            "marginRight": "20px",
            "width": "35px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "22.75px",
              "height": "35px",
              "lineHeight": "35px",
              "width": "35px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment-author"
      >
        Benny Cosmos
      </div>
      <div
        className="comment-time mb1"
      >
        Lige nu
      </div>
      <div
        className="comment"
        dangerouslySetInnerHTML={
          Object {
            "__html": "comment_test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render edit form 1`] = `
<div
  className="comment-wrapper"
>
  
  <button
    className="comment-edit-button btn btn-link link-subtle"
    onClick={[Function]}
  >
    <span
      className="glyphicon glyphicon-pencil"
    />
  </button>
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "35px",
            "lineHeight": "64.75px",
            "marginRight": "20px",
            "width": "35px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "22.75px",
              "height": "35px",
              "lineHeight": "35px",
              "width": "35px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment-author"
      >
        Benny Cosmos
      </div>
      <div
        className="comment-time mb1"
      >
        Lige nu
      </div>
      <div
        className="comment"
        dangerouslySetInnerHTML={
          Object {
            "__html": "comment_test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render save form 1`] = `
<div
  className="comment-wrapper"
>
  <div
    className="comment-saving"
  >
    <span
      className="spinner"
      style={
        Object {
          "borderTopColor": null,
          "display": "inline-block",
          "height": "30px",
          "width": "30px",
        }
      }
    />
  </div>
  <button
    className="comment-edit-button btn btn-link link-subtle"
    onClick={[Function]}
  >
    <span
      className="glyphicon glyphicon-pencil"
    />
  </button>
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "35px",
            "lineHeight": "64.75px",
            "marginRight": "20px",
            "width": "35px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "22.75px",
              "height": "35px",
              "lineHeight": "35px",
              "width": "35px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment-author"
      >
        Benny Cosmos
      </div>
      <div
        className="comment-time mb1"
      >
        Lige nu
      </div>
      <div
        className="comment"
        dangerouslySetInnerHTML={
          Object {
            "__html": "comment_test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`CommentContainer Save button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  editComment={[Function]}
  toggleEdit={[Function]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <button
      className="comment-edit-button btn btn-link link-subtle"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        style={
          Object {
            "marginRight": "20px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "35px",
                "lineHeight": "64.75px",
                "marginRight": "20px",
                "width": "35px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "22.75px",
                  "height": "35px",
                  "lineHeight": "35px",
                  "width": "35px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "22.75px",
                    "height": "35px",
                    "lineHeight": "35px",
                    "width": "35px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment-author"
        >
          Benny Cosmos
        </div>
        <div
          className="comment-time mb1"
        >
          Lige nu
        </div>
        <div
          className="comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "comment_test",
            }
          }
        />
      </div>
    </div>
  </div>
</CommentWrapper>
`;
